style/initiative.css
.initiative {
  background-color: #212121;
  background: url("/images/landing/Grain.png") no-repeat center center/cover;
  height: 920px;
}

.initiative h2 {
  color: var(--heading-color);
  font-family: Nagoda;
  font-size: 31px;
  text-align: right;
  padding-top: 80px;
  margin: auto;
  margin-right: 10px;
}

.initiative p {
  margin-top: 420px;
  margin-left: 6%;
  margin-right: 6%;
  font-family: var(--paragraphs);
  color: var(--paragraph-color);
}

.initiative-image {
  display: none;
}

.initiative span {
  background-color: #f3ec78;
  background-image: linear-gradient(45deg, #df1631, #dd189b);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

.initiative-decoration {
  display: none;
}

.initiative-decoration-mobile {
  display: block;
  z-index: 0;
  position: absolute;
  margin-top: 200px;
  width: 100%;
  z-index: 0;
}

.initiative-image-mobile {
  display: block;
  margin-top: 40px;
  z-index: 1;
  position: absolute;
  margin-left: 10%;
}

.initiative div {
}

@media only screen and (min-width: 600px) {
  .initiative {
    background-color: #212121;
    height: 1200px;
  }

  .initiative h2 {
    font-size: 80px;
    line-height: 80px;
    padding-top: 180px;
    margin-right: 15%;
  }

  .initiative-decoration {
    display: block;
    width: 100%;
    z-index: 0;
    margin-top: 200px;
    position: absolute;
  }

  .initiative-decoration-mobile {
    display: none;
  }

  .initiative-image {
    display: block;
    z-index: 1;
    margin-left: 15%;
    margin-top: 40px;
    position: absolute;
    width: 35%;
  }

  .initiative-image-mobile {
    display: none;
  }

  .initiative div {
    display: flex;
    flex-direction: row;
  }

  .initiative p {
    margin-top: 40px;
    margin-left: 55%;
    margin-right: 6%;
    width: 550px;
    font-family: var(--paragraphs);
    color: var(--paragraph-color);
    z-index: 2;
    position: absolute;
  }
}

